--- a/mounting.html
+++ b/mounting.html
@@ -101,137 +101,170 @@
 		</nav>
 	</header>
 
-
 	<section class="mounting">
 		<div class="mounting__wrap container">
-			<div class="performered_list">
+
+			<div class="mounting__list">
 				<div class="leftbar">
 					<div class="leftbar__header">
 						<p>Террасная доска</p>
 					</div>
 					<div class="leftbar__content">
 						<ul>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
+							<li><a href="#">Trex</a></li>
+							<li><a href="#">Древопласт</a></li>
+							<li><a href="#">Woodvex</a></li>
+							<li><a href="#">Термодревесина</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="leftbar">
 					<div class="leftbar__header">
-						<p>Террасная доска</p>
+						<p>Ограждения</p>
 					</div>
 					<div class="leftbar__content">
 						<ul>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
+							<li><a href="#">Trex</a></li>
+							<li><a href="#">Woodvex</a></li>
 						</ul>
+					</div>
+				</div>
+				<div class="leftbar">
+					<div class="leftbar__header">
+						<p>Безшовные покрытия</p>
+					</div>
+					<div class="leftbar__content">
+						<ul>
+							<li><a href="#">Покрытия из резиновой крошки</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="leftbar-link">
+					<div class="leftbar-link__header">
+						<a href="#">Фигуры из каучука</a>
+					</div>
+				</div>
+				<div class="leftbar-link">
+					<div class="leftbar-link__header">
+						<a href="#">Скидки и акции</a>
+					</div>
+				</div>
+				<div class="leftbar-link">
+					<div class="leftbar-link__header">
+						<a href="#">Монтаж</a>
 					</div>
 				</div>
 			</div>
+
 			<div class="mounting__right">
-		<h2>Монтаж</h2>
-		<p class="mounting__wrap-text">Компания «ЦЕНТР ТЕРРАСНОЙ ДОСКИ» предлагает готовые решения в сфере 
-			проектирования террасных систем, входных групп, причалов, летних кафе, открытых 
-			зон ресторанов и отелей, приусадебных участков и котеждей.</p>
-			<div class="mounting__wrap-container">
-				<p class="mounting__wrap-container--left">
-					Проекты реализуем полностью. 
-					Включая про ектирование, визуализацию, монтаж, гарантийное 
-					обслуживание и последующее сопровождение.
+				<h2 class="h2">Монтаж</h2>
+
+				<p class="mounting__wrap-text">
+					Компания «ЦЕНТР ТЕРРАСНОЙ ДОСКИ» предлагает готовые решения в сфере 
+					проектирования террасных систем, входных групп, причалов, летних кафе, открытых 
+					зон ресторанов и отелей, приусадебных участков и котеждей.
 				</p>
-				<p class="mounting__wrap-container--right">
-					Многим клиентам нужны не просто низкие цены, а 
-					сочетание низких цен и комфортных условий. Сервис. Оперативность. Качество выполнения услуг. Поверьте, люди хотят получить быстрее и лучше. 
-					Мы же предусмотрели и то и другое!
-				</p>
+
+				<div class="mounting__wrap-container">
+					<p class="mounting__wrap-container--left">
+						Проекты реализуем полностью. 
+						Включая про ектирование, визуализацию, монтаж, гарантийное 
+						обслуживание и последующее сопровождение.
+					</p>
+					<p class="mounting__wrap-container--right">
+						Многим клиентам нужны не просто низкие цены, а 
+						сочетание низких цен и комфортных условий. Сервис. Оперативность. Качество 
+						выполнения услуг. Поверьте, люди хотят получить быстрее и лучше. 
+						Мы же предусмотрели и то и другое!
+					</p>
+				</div>
+
+				<div class="prices">
+					<div class="prices__wrap container">
+						<h3 class="h3">МЫ НЕ СТЕСНЯЕМСЯ СВОИХ ЦЕН!</h3>
+						<p>
+							Срок службы террасы напрямую зависит от качества монтажа. 
+							Вы можете быть уверяны в долговечности  выполненного 
+							объекта специалистами нашей компании!
+						</p>
+						<div class="prices__content">
+							<div class="prices__content-img">
+								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+							</div>
+							<div class="prices__content-img">
+								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+							</div>
+							<div class="prices__content-img">
+								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="professional">
+					<div class="professional_wrap container">
+
+						<h2 class="h2">Профессиональная работа – это:</h2>
+
+						<div class="professional__services">
+							<div class="professional__item">
+								<img src="img/stopwatch.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Строгое соблюдение сроков
+								</p>
+							</div>
+							<div class="professional__item">
+								<img src="img/hammer.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Четкое выполнение технологии монтажа
+								</p>
+							</div>
+							<div class="professional__item">
+								<img src="img/handshake.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Индивидуальный подход к каждому клиенту
+								</p>
+							</div>
+							<div class="professional__item">
+								<img src="img/wood.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Сохранность покрытия и отсутствие монтажных дефектов
+								</p>
+							</div>
+							<div class="professional__item">
+								<img src="img/guarantee.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Гарантия на монтажные работы и последующие сопровождение
+								</p>
+							</div>
+							<div class="professional__item">
+								<img src="img/builder.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Большой опыт работы (штатные бригады)
+								</p>
+							</div>
+							<div class="professional__item">
+								<img src="img/save-money.png" alt="" class="professional__item--icon">
+								<p class="professional__item--info">
+									Экономия ваших средств за счет оптимального количества комплектующих
+								</p>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			
 			</div>
 		</div>
-		</div>
-
-	</section>
-
-	<section class="prices">
-		<div class="prices__wrap container">
-			<h3>МЫ НЕ СТЕСНЯЕМСЯ СВОИХ ЦЕН!</h3>
-			<p>Срок службы террасы напрямую зависит от качества монтажа. Вы можете быть уверяны в долговечности  выполненного 
-				объекта специалистами нашей компании!</p>
-				<div class="prices__content">
-					<div class="prices__content-img">
-						<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-					</div>
-					<div class="prices__content-img">
-						<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-					</div>
-					<div class="prices__content-img">
-						<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-					</div>
-
-				</div>
-
-		</div>
-
-	</section>
-
-	<section class="professional">
-		<div class="professional_wrap container">
-			<h2>Профессиональная работа – это:</h2>
-			<div class="professional__services">
-				<div class="professional__item">
-					<img src="img/delivery.png" alt="Доставка" class="professional__item--icon">
-					<p class="professional__item--info">
-						Строгое соблюдение сроков
-					</p>
-				</div>
-				<div class="professional__item">
-					<img src="img/drill.png" alt="Монтаж" class="professional__item--icon">
-					<p class="professional__item--info">
-						Четкое выполнение технологии монтажа
-					</p>
-				</div>
-				<div class="professional__item">
-					<img src="img/guarantee.png" alt="Гарантия" class="professional__item--icon">
-					<p class="professional__item--info">
-						Индивидуальный подход к каждому клиенту
-					</p>
-				</div>
-				<div class="professional__item">
-					<img src="img/guarantee.png" alt="Гарантия" class="professional__item--icon">
-					<p class="professional__item--info">
-						Сохранность покрытия и отсутствие монтажных дефектов
-					</p>
-				</div>
-				<div class="professional__item">
-					<img src="img/guarantee.png" alt="Гарантия" class="professional__item--icon">
-					<p class="professional__item--info">
-						Гарантия на монтажные работы и последующие сопровождение
-					</p>
-				</div>
-				<div class="professional__item">
-					<img src="img/guarantee.png" alt="Гарантия" class="professional__item--icon">
-					<p class="professional__item--info">
-						Большой опыт работы (штатные бригады)
-					</p>
-				</div>
-				<div class="professional__item">
-					<img src="img/guarantee.png" alt="Гарантия" class="professional__item--icon">
-					<p class="professional__item--info">
-						Экономия ваших средств за счет оптимального количества комплектующих
-					</p>
-				</div>
-			</div>
-		</div>
-
 	</section>
 
 	<section class="contacts">
 		<div class="contacts__wrapper container">
-			<h2 class="contacts__title">Получите бесплатную<br>консультацию от нашего<br>дизайнера</h2>
+
+			<h2 class="contacts__title h2">Получите бесплатную<br>консультацию от нашего<br>дизайнера</h2>
+			
 			<div class="contacts__item">
-				<form action="" class="contacts__form">
+				<form action="#" class="contacts__form">
 					<div class="contacts__form--item">
 						<label for="formName">Ваше имя</label>
 						<input type="text" name="name" id="formName" required>
@@ -252,7 +285,7 @@
 						<p class="contacts__requisites--city">
 							Санкт-Петербург
 						</p>
-						<a class="contacts__requisites--num">
+						<a href="tel:+7(981)1406339" class="contacts__requisites--num">
 							+7(981)140-63-39
 						</a>
 					</div>
@@ -260,7 +293,7 @@
 						<p class="contacts__requisites--city">
 							Смоленск
 						</p>
-						<a class="contacts__requisites--num">
+						<a  href="tel:+7(981)1406339" class="contacts__requisites--num">
 							+7(920)323-74-94
 						</a>
 					</div>
@@ -269,10 +302,9 @@
 					</a>
 				</div>
 			</div>
+
 		</div>
 	</section>
-
-
 
 	<footer class="footer">
 		<div class="footer__wrapper container">
@@ -286,6 +318,36 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Modal -->
+	<div class="modal" id="modal__edits">
+		<form action="#" class="modal__form form" method="POST">
+
+			<button class="close modal__close" type="button">
+				<span></span>
+				<span></span>
+			</button>
+
+			<h3 class="form__title">Заказать звонок</h3>
+
+			<input type="hidden" name="subject" value="Заказать звонок">
+
+			<div class="form__item">
+				<label for="formName" class="form__label">Ваше имя*</label>
+				<input id="formName" type="text" name="name" placeholder="Ваше имя" class="form__input _req">
+			</div>
+
+			<div class="form__item">
+				<label for="formPhone" class="form__label">Номер телефона*</label>
+				<input id="formPhone" type="tel" name="phone" placeholder="Номер телефона" class="form__input _req">
+			</div>
+
+			<div class="form__btn">
+				<button type="submit" class="btn form__btn_button" name="submit">Заказать звонок</button>
+			</div>
+
+		</form>
+	</div>
 
 </body>
 
