--- a/performered.html
+++ b/performered.html
@@ -110,10 +110,10 @@
                     </div>
                     <div class="leftbar__content">
                         <ul>
-                            <li><a>Trex</a></li>
-                            <li><a>Древопласт</a></li>
-                            <li><a>Woodvex</a></li>
-                            <li><a>Термодревесина</a></li>
+                            <li><a href="#">Trex</a></li>
+                            <li><a href="#">Древопласт</a></li>
+                            <li><a href="#">Woodvex</a></li>
+                            <li><a href="#">Термодревесина</a></li>
                         </ul>
                     </div>
                 </div>
@@ -123,8 +123,8 @@
                     </div>
                     <div class="leftbar__content">
                         <ul>
-                            <li><a>Trex</a></li>
-                            <li><a>Woodvex</a></li>
+                            <li><a href="#">Trex</a></li>
+                            <li><a href="#">Woodvex</a></li>
                         </ul>
                     </div>
                 </div>
@@ -134,147 +134,129 @@
                     </div>
                     <div class="leftbar__content">
                         <ul>
-                            <li><a>Покрытия из резиновой крошки</a></li>
+                            <li><a href="#">Покрытия из резиновой крошки</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="leftbar-link">
                     <div class="leftbar-link__header">
-                        <a><p>Фигуры из каучука</p></a>
-                    </div>
-                    <div class="leftbar__content">
-                        <ul>
-                            <li><a></a></li>
-                        </ul>
+                        <a href="#">Фигуры из каучука</a>
                     </div>
                 </div>
                 <div class="leftbar-link">
                     <div class="leftbar-link__header">
-                        <a><p>Скидки и акции</p></a>
-                    </div>
-                    <div class="leftbar__content">
-                        <ul>
-                            <li><a></a></li>
-                        </ul>
+                        <a href="#">Скидки и акции</a>
                     </div>
                 </div>
                 <div class="leftbar-link">
                     <div class="leftbar-link__header">
-                        <a><p>Монтаж</p></a>
-                    </div>
-                    <div class="leftbar__content">
-                        <ul>
-                            <li><a></a></li>
-                        </ul>
+                        <a href="#">Монтаж</a>
                     </div>
                 </div>
 			</div>
 			<div class="performered-tabs">
-				<h2>Выполненные работы</h2>
+				<h2 class="h2">Выполненные работы</h2>
 				<ul class="performered-tabs__list">
 					<li class="performered-tabs__item">монтаж террасной доски</li>
 					<li class="performered-tabs__item">монтаж ограждений</li>
 					<li class="performered-tabs__item">монтаж эко-покрытия</li>
 				</ul>
-				<div>
-					<div class="performered-tabs__wrap">
-						<div class="performered__wrapper">
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-1.png" alt="">
-								</div>
-								<p>Террасы у дома в лесу</p>
+				<div class="performered-tabs__wrap">
+					<div class="performered__wrapper">
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-1.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Дизайнерский мост через реку</p>
+							<p>Террасы у дома в лесу</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-3.png" alt="">
-								</div>
-								<p>Террасы c дизайнерским решением</p>
+							<p>Дизайнерский мост через реку</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-3.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасный настил Trex</p>
+							<p>Террасы c дизайнерским решением</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Терраса со ступенями и системой ограждения</p>
+							<p>Террасный настил Trex</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасы, балконы, эксплуатируемая крыша</p>
+							<p>Терраса со ступенями и системой ограждения</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-1.png" alt="">
-								</div>
-								<p>Террасы у дома в лесу</p>
+							<p>Террасы, балконы, эксплуатируемая крыша</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-1.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Дизайнерский мост через речку</p>
+							<p>Террасы у дома в лесу</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-3.png" alt="">
-								</div>
-								<p>Террасы c дизайнерским решением</p>
+							<p>Дизайнерский мост через речку</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-3.png" alt="">
 							</div>
+							<p>Террасы c дизайнерским решением</p>
 						</div>
 					</div>
-					<div class="performered-tabs__wrap">
-						<div class="performered__wrapper">
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасы у дома в лесу</p>
+				</div>
+				<div class="performered-tabs__wrap">
+					<div class="performered__wrapper">
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасы у дома в лесу</p>
+							<p>Террасы у дома в лесу</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасы c дизайнерским решением</p>
+							<p>Террасы у дома в лесу</p>
+						</div>
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
+							<p>Террасы c дизайнерским решением</p>
 						</div>
 					</div>
-					<div class="performered-tabs__wrap">
-						<div class="performered__wrapper">
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасы у дома в лесу</p>
+				</div>
+				<div class="performered-tabs__wrap">
+					<div class="performered__wrapper">
+						<div class="performered-tabs__wrap-item">
+							<div class="performered__img">
+								<img src="img/slider-item-2.png" alt="">
 							</div>
+							<p>Террасы у дома в лесу</p>
 						</div>
 					</div>
-
+				</div>
 			</div>
 			<div class="performered__button--wrap">
 				<div class="performered__button">
 					<a href="/" class="performered__button--item btn">Показать еще</a>	
 				</div>
 			</div>
-			
 		</div>
 	</section>
 
@@ -290,6 +272,36 @@
 			</div>
 		</div>
 	</footer>
+
+    <!-- Modal -->
+    <div class="modal" id="modal__edits">
+        <form action="#" class="modal__form form" method="POST">
+
+            <button class="close modal__close" type="button">
+                <span></span>
+                <span></span>
+            </button>
+
+            <h3 class="form__title">Заказать звонок</h3>
+
+            <input type="hidden" name="subject" value="Заказать звонок">
+
+            <div class="form__item">
+                <label for="formName" class="form__label">Ваше имя*</label>
+                <input id="formName" type="text" name="name" placeholder="Ваше имя" class="form__input _req">
+            </div>
+
+            <div class="form__item">
+                <label for="formPhone" class="form__label">Номер телефона*</label>
+                <input id="formPhone" type="tel" name="phone" placeholder="Номер телефона" class="form__input _req">
+            </div>
+
+            <div class="form__btn">
+                <button type="submit" class="btn form__btn_button" name="submit">Заказать звонок</button>
+            </div>
+
+        </form>
+    </div>
 
 </body>
 
