--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 					</div>
 				</div>
 				<div class="about__illustration">
-					<div class="about__illustration--wrapper container click">
-						<a href="#services" class="about__anchor">
+					<div class="about__illustration--wrapper container ">
+						<a href="#services" class="about__anchor click">
 							<span>листайте вниз</span>
 							<span class="about__anchor--arrow" ><img src="img/arrow-down.png" alt="Листай вниз"></span>
 						</a>
@@ -450,21 +450,22 @@
 			</div>
 		</section>
 	
-		<footer class="footer">
-			<div class="footer__wrapper container">
-				<a href="/" class="footer__policy">Политика конфиденциальности</a>
-				<p class="footer__copyright">Copyright © 2016 - 2021 Центр террасной доски</p>
-				<div class="footer__made-by">
-					<p>Сайт разработан веб-студией</p>
-					<a href="/" class="footer__made-by--link">
-						<img src="img/made-by.png" alt="Четыре квадрата">
-					</a>
-				</div>
-			</div>
-		</footer>
-
+		
 	</main>
-
+	
+	<footer class="footer">
+		<div class="footer__wrapper container">
+			<a href="/" class="footer__policy">Политика конфиденциальности</a>
+			<p class="footer__copyright">Copyright © 2016 - 2021 Центр террасной доски</p>
+			<div class="footer__made-by">
+				<p>Сайт разработан веб-студией</p>
+				<a href="/" class="footer__made-by--link">
+					<img src="img/made-by.png" alt="Четыре квадрата">
+				</a>
+			</div>
+		</div>
+	</footer>
+	
 	<!-- Modal -->
 	<div class="modal" id="modal__edits">
 		<form action="#" class="modal__form form" method="POST">
