--- a/cart.html
+++ b/cart.html
@@ -294,6 +294,19 @@
 
     </main>
 
+    <footer class="footer">
+		<div class="footer__wrapper container">
+			<a href="/" class="footer__policy">Политика конфиденциальности</a>
+			<p class="footer__copyright">Copyright © 2016 - 2021 Центр террасной доски</p>
+			<div class="footer__made-by">
+				<p>Сайт разработан веб-студией</p>
+				<a href="/" class="footer__made-by--link">
+					<img src="img/made-by.png" alt="Четыре квадрата">
+				</a>
+			</div>
+		</div>
+	</footer>
+
 	<!-- Modal -->
 	<div class="modal" id="modal__edits">
 		<form action="#" class="modal__form form" method="POST">
