--- a/mounting.html
+++ b/mounting.html
@@ -24,42 +24,49 @@
 					Пн. - Пт. с 10:00 до 19:00
 				</p>
 				<div class="header__contacts">
-					<div class="header__contacts--item">
+					<p class="header__contacts--item">
 						<a href="tel:+79811406339" class="header__contacts--number">
 							+7 (981) 140-63-39
 						</a>
-						<p class="header__contacts--city">
+						<span class="header__contacts--city">
 							Санкт-Петербург
-						</p>
-					</div>
-					<div class="header__contacts--item">
-						<a href="/" class="header__contacts--number">
+						</span>
+					</p>
+					<p class="header__contacts--item">
+						<a href="tel:+79811406350" class="header__contacts--number">
 							+7 (981) 140-63-50
 						</a>
-						<p class="header__contacts--city">
+						<span class="header__contacts--city">
 							Санкт-Петербург
-						</p>
-					</div>
-					<div class="header__contacts--item">
-						<a href="/" class="header__contacts--number">
+						</span>
+					</p>
+					<p class="header__contacts--item">
+						<a href="tel:+79037837381" class="header__contacts--number">
 							+7 (903) 783-73-81
 						</a>
-						<p class="header__contacts--city">
+						<span class="header__contacts--city">
 							Москва
-						</p>
-					</div>
+						</span>
+					</p>
 				</div>
-				<a class="header__button btn">Заказать звонок</a>
+				<a class="header__button btn modal__edits">Заказать звонок</a>
 				<button class="hamburger" type="button">
 					<span class="hamburger__item"></span>
 				</button>
 			</div>
 		</div>
 
-		<nav class="header__nav">
+		<nav class="header__nav nav">
 			<div class="header__nav--wrapper container">
-				<ul>
-					<li><a href="#" class="catalog">Каталог товаров</a></li>
+				<ul class="nav__menu">
+					<li class="nav__submenu">
+						<a href="#" class="catalog">Каталог товаров</a>
+						<!-- <ul>
+							<li><a href="#">Link</a></li>
+							<li><a href="#">Link</a></li>
+							<li><a href="#">Link</a></li>
+						</ul> -->
+					</li>
 					<li><a href="#">Готовые решения</a></li>
 					<li><a href="#">Выполненые работы</a></li>
 					<li><a href="#">Скидки и акции</a></li>
@@ -157,7 +164,7 @@
 			</div>
 
 			<div class="mounting__right">
-				<h2 class="h2">Монтаж</h2>
+				<h2 class=" mounting__title h2">Монтаж</h2>
 
 				<p class="mounting__wrap-text">
 					Компания «ЦЕНТР ТЕРРАСНОЙ ДОСКИ» предлагает готовые решения в сфере 
@@ -180,8 +187,8 @@
 				</div>
 
 				<div class="prices">
-					<div class="prices__wrap container">
-						<h3 class="h3">МЫ НЕ СТЕСНЯЕМСЯ СВОИХ ЦЕН!</h3>
+					<div class="prices__wrap">
+						<h3 class="prices__title h3">МЫ НЕ СТЕСНЯЕМСЯ СВОИХ ЦЕН!</h3>
 						<p>
 							Срок службы террасы напрямую зависит от качества монтажа. 
 							Вы можете быть уверяны в долговечности  выполненного 
@@ -202,9 +209,9 @@
 				</div>
 			
 				<div class="professional">
-					<div class="professional_wrap container">
+					<div class="professional_wrap">
 
-						<h2 class="h2">Профессиональная работа – это:</h2>
+						<h2 class=" professional__title h2">Профессиональная работа – это:</h2>
 
 						<div class="professional__services">
 							<div class="professional__item">
