--- a/performered.html
+++ b/performered.html
@@ -24,42 +24,49 @@
 					Пн. - Пт. с 10:00 до 19:00
 				</p>
 				<div class="header__contacts">
-					<div class="header__contacts--item">
+					<p class="header__contacts--item">
 						<a href="tel:+79811406339" class="header__contacts--number">
 							+7 (981) 140-63-39
 						</a>
-						<p class="header__contacts--city">
+						<span class="header__contacts--city">
 							Санкт-Петербург
-						</p>
-					</div>
-					<div class="header__contacts--item">
-						<a href="/" class="header__contacts--number">
+						</span>
+					</p>
+					<p class="header__contacts--item">
+						<a href="tel:+79811406350" class="header__contacts--number">
 							+7 (981) 140-63-50
 						</a>
-						<p class="header__contacts--city">
+						<span class="header__contacts--city">
 							Санкт-Петербург
-						</p>
-					</div>
-					<div class="header__contacts--item">
-						<a href="/" class="header__contacts--number">
+						</span>
+					</p>
+					<p class="header__contacts--item">
+						<a href="tel:+79037837381" class="header__contacts--number">
 							+7 (903) 783-73-81
 						</a>
-						<p class="header__contacts--city">
+						<span class="header__contacts--city">
 							Москва
-						</p>
-					</div>
+						</span>
+					</p>
 				</div>
-				<a class="header__button btn">Заказать звонок</a>
+				<a class="header__button btn modal__edits">Заказать звонок</a>
 				<button class="hamburger" type="button">
 					<span class="hamburger__item"></span>
 				</button>
 			</div>
 		</div>
 
-		<nav class="header__nav">
+		<nav class="header__nav nav">
 			<div class="header__nav--wrapper container">
-				<ul>
-					<li><a href="#" class="catalog">Каталог товаров</a></li>
+				<ul class="nav__menu">
+					<li class="nav__submenu">
+						<a href="#" class="catalog">Каталог товаров</a>
+						<!-- <ul>
+							<li><a href="#">Link</a></li>
+							<li><a href="#">Link</a></li>
+							<li><a href="#">Link</a></li>
+						</ul> -->
+					</li>
 					<li><a href="#">Готовые решения</a></li>
 					<li><a href="#">Выполненые работы</a></li>
 					<li><a href="#">Скидки и акции</a></li>
@@ -251,10 +258,10 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="performered__button--wrap">
-				<div class="performered__button">
-					<a href="/" class="performered__button--item btn">Показать еще</a>	
+				<div class="performered__button--wrap">
+					<div class="performered__button">
+						<a href="/" class="performered__button--item btn">Показать еще</a>	
+					</div>
 				</div>
 			</div>
 		</div>
